--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,26 @@
   /* Main Axis */
   justify-content: space-around;
   /* Cross Axis */
-  align-items: center;
-  height: 200vh;
+  align-items: flex-start;
+  height: 100vh;
 }
 
-.box {
+.child {
   width: 200px;
   height: 200px;
   background: peru;
   color: white;
+}
+
+.child:nth-child(1) {
+  order: 2;
+  align-self: center;
+}
+
+.child:nth-child(2) {
+  order: 3;
+}
+
+.child:nth-child(3) {
+  order: 1;
 }
