--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,16 @@
-.wrapper {
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.father {
   display: flex;
   /* Main Axis */
   justify-content: space-around;
-  /* Cross Axis */
-  align-items: flex-start;
+  align-content: space-around; /* line 를 변경 */
   height: 100vh;
+  flex-direction: row-reverse;
+  flex-wrap: wrap; /* wrap-reverse */
 }
 
 .child {
@@ -12,17 +18,8 @@
   height: 200px;
   background: peru;
   color: white;
-}
-
-.child:nth-child(1) {
-  order: 2;
-  align-self: center;
-}
-
-.child:nth-child(2) {
-  order: 3;
-}
-
-.child:nth-child(3) {
-  order: 1;
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
