--- a/styles.css
+++ b/styles.css
@@ -7,14 +7,11 @@ body {
   display: flex;
   /* Main Axis */
   justify-content: space-around;
-  align-content: space-around; /* line 를 변경 */
-  height: 100vh;
-  flex-direction: row-reverse;
-  flex-wrap: wrap; /* wrap-reverse */
+  width: 100%;
 }
 
 .child {
-  width: 200px;
+  width: 300px;
   height: 200px;
   background: peru;
   color: white;
@@ -22,4 +19,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.child:nth-child(2) {
+  background: #000;
+  flex-grow: 1;
 }
