--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -1,4 +1,4 @@
-button, a {
+%button {
   font-family: inherit;
   border-radius: 7px;
   font-size: 12px;
@@ -8,13 +8,3 @@ button, a {
   color: white;
   font-weight: 500;
 }
-
-a {
-  text-decoration: none;
-}
-
-button {
-  border: none;
-}
-
-/*# sourceMappingURL=styles.css.map */
