--- a/dest/css/styles.css
+++ b/dest/css/styles.css
@@ -1,20 +1,20 @@
-button, a {
-  font-family: inherit;
-  border-radius: 7px;
-  font-size: 12px;
-  text-transform: uppercase;
-  padding: 5px 10px;
-  background-color: peru;
-  color: white;
-  font-weight: 500;
+h1 {
+  color: red;
 }
-
-a {
-  text-decoration: none;
+@media screen and (min-width: 500px) and (max-width: 690px) {
+  h1 {
+    color: yellow;
+  }
 }
-
-button {
-  border: none;
+@media screen and (max-width: 500px) and (max-width: 690px) and (orientation: landscape) {
+  h1 {
+    font-size: 60px;
+  }
+}
+@media screen and (min-width: 501px) and (max-width: 1120px) {
+  h1 {
+    color: green;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
