--- a/dest/css/styles.css
+++ b/dest/css/styles.css
@@ -1,101 +1,207 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Caladea:400&display=swap");
+.footer .footer__column, .blog .blog__post .post__content .post__date, .under-hero .under-hero__content .wrapper h4, .hero a, .hero h4, header nav ul, a {
+  font-family: "Montserrat";
+  font-weight: 500;
+  font-size: 10px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
 * {
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 body {
-  height: 100vh;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: #f0eff0;
+  font-family: "Caladea";
+  padding-top: 70px;
+}
+
+body > *:not(.footer) {
+  padding: 0px 140px;
 }
 
 header {
+  z-index: 1;
   position: fixed;
+  width: 100%;
   top: 0;
   left: 0;
-  width: 33%;
-  height: 100%;
-  padding: 190px;
-  padding: 10vh 0 72px 72px;
+  padding: 0px 140px;
+  background-color: white;
+  height: 70px;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  color: #e7473c;
-}
-header h1 {
-  font-size: 85px;
-  width: 50%;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-}
-header h3 {
-  font-size: 30px;
-  font-weight: 300;
-  margin-bottom: 40px;
-}
-header h3,
-header p {
-  width: 70%;
-  line-height: 1.2;
-  text-align: justify;
-}
-header p {
-  font-weight: 300;
-  font-size: 22px;
-  margin-bottom: 40px;
+  align-items: center;
 }
 header nav {
-  width: 80%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 header nav ul {
   display: flex;
-  flex-wrap: wrap;
+  text-transform: uppercase;
+  font-size: 10px;
 }
-header nav ul li {
-  cursor: pointer;
-  margin-right: 12px;
-  font-size: 20px;
-  color: black;
-  opacity: 0.5;
-  padding-bottom: 5px;
-  border-bottom: 2px solid black;
-  margin-bottom: 20px;
-}
-header nav ul li:hover {
-  opacity: 1;
+header nav ul:first-child li {
+  margin-right: 60px;
 }
 
-main {
-  margin-left: 33%;
-}
-main .movie {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 5%, transparent, transparent, transparent, transparent) #e7473c;
+.hero {
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-}
-main .movie .wrapper {
-  width: 80%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("https://images.unsplash.com/photo-1583248369069-9d91f1640fe6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1352&q=80");
+  background-size: cover;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  margin: 0px 140px;
+  margin-bottom: 80px;
 }
-main .movie .wrapper .movie__header {
+.hero h4 {
+  margin-bottom: 30px;
+}
+.hero h3 {
+  font-size: 48px;
+  width: 35%;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.hero a {
+  width: 10%;
+  background-color: white;
+  padding: 20px 0px;
+  text-align: center;
+  text-decoration: none;
+  color: black;
+  font-size: 10px;
+  transition: color 0.3s linear, background 0.3s linear;
+}
+.hero a:hover {
+  background-color: black;
+  color: white;
+}
+
+.under-hero {
+  height: 80vh;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  margin-bottom: 25px;
-}
-main .movie .wrapper .movie__header h4 {
-  font-size: 32px;
-  text-transform: uppercase;
-}
-main .movie .wrapper .movie__header h5 {
-  letter-spacing: 2px;
-}
-main .movie img {
   width: 100%;
-  box-shadow: 0 80px 80px -80px #000, 0 0 12px rgba(0, 0, 0, 0.06), inset 0 0 0 1px rgba(0, 0, 0, 0.2);
+  margin-bottom: 80px;
+}
+.under-hero .under-hero__content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f3ede8;
+}
+.under-hero .under-hero__content .wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.under-hero .under-hero__content .wrapper h4 {
+  margin-bottom: 30px;
+}
+.under-hero .under-hero__content .wrapper h3 {
+  font-size: 36px;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.under-hero .under-hero__content .wrapper a {
+  border: 1px solid black;
+  padding: 20px;
+}
+.under-hero img,
+.under-hero div {
+  width: 50%;
+}
+
+.blog {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 60vh);
+  margin-bottom: 80px;
+}
+.blog .blog__post {
+  background-color: #f3ede8;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.blog .blog__post:nth-child(even) img {
+  order: 1;
+}
+.blog .blog__post img {
+  width: 100%;
+  height: 100%;
+}
+.blog .blog__post .post__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.blog .blog__post .post__content .post__date {
+  margin-bottom: 70px;
+}
+.blog .blog__post .post__content h4 {
+  font-size: 32px;
+  margin-bottom: 40px;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 410px);
+}
+.gallery .gallery__poster {
+  height: 100%;
+  cursor: pointer;
+}
+.gallery .gallery__poster img {
+  max-width: 100%;
+  height: 100%;
+  transition: opacity 0.3s linear;
+}
+.gallery .gallery__poster img:hover {
+  opacity: 0.5;
+}
+
+.footer {
+  margin-top: 100px;
+  background-color: #f3ede8;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 65px 0px;
+}
+.footer .footer__column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer .footer__column .column__title {
+  margin-bottom: 50px;
+  opacity: 0.5;
+}
+.footer .footer__column ul {
+  text-align: center;
+}
+.footer .footer__column ul li {
+  margin-bottom: 15px;
+}
+.footer .footer__column:nth-child(2) {
+  border-right: 1px solid black;
+  border-left: 1px solid black;
 }
 
 /*# sourceMappingURL=styles.css.map */
