--- a/dest/css/styles.css
+++ b/dest/css/styles.css
@@ -1,207 +1,74 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Caladea:400&display=swap");
-.footer .footer__column, .blog .blog__post .post__content .post__date, .under-hero .under-hero__content .wrapper h4, .hero a, .hero h4, header nav ul, a {
-  font-family: "Montserrat";
-  font-weight: 500;
-  font-size: 10px;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-}
-
 * {
   box-sizing: border-box;
 }
 
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
 body {
-  font-family: "Caladea";
-  padding-top: 70px;
-}
-
-body > *:not(.footer) {
-  padding: 0px 140px;
-}
-
-header {
-  z-index: 1;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-  padding: 0px 140px;
-  background-color: white;
-  height: 70px;
-  display: flex;
-  align-items: center;
-}
-header nav {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-header nav ul {
-  display: flex;
-  text-transform: uppercase;
-  font-size: 10px;
-}
-header nav ul:first-child li {
-  margin-right: 60px;
-}
-
-.hero {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   height: 100vh;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("https://images.unsplash.com/photo-1583248369069-9d91f1640fe6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1352&q=80");
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  margin: 0px 140px;
-  margin-bottom: 80px;
+  background-color: #af7732;
+  display: grid;
+  grid-template-columns: 1.5fr 1.9fr 1.5fr;
+  grid-template-rows: 1fr 5fr 1fr;
+  gap: 1px;
 }
-.hero h4 {
-  margin-bottom: 30px;
-}
-.hero h3 {
-  font-size: 48px;
-  width: 35%;
-  text-align: center;
-  margin-bottom: 50px;
-}
-.hero a {
-  width: 10%;
+body > * {
   background-color: white;
-  padding: 20px 0px;
-  text-align: center;
-  text-decoration: none;
-  color: black;
-  font-size: 10px;
-  transition: color 0.3s linear, background 0.3s linear;
-}
-.hero a:hover {
-  background-color: black;
-  color: white;
-}
-
-.under-hero {
-  height: 80vh;
   display: flex;
-  width: 100%;
-  margin-bottom: 80px;
-}
-.under-hero .under-hero__content {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #f3ede8;
+  color: #af7732;
+  font-size: 22px;
+  text-transform: uppercase;
 }
-.under-hero .under-hero__content .wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+body .menu {
+  grid-column-start: -2;
 }
-.under-hero .under-hero__content .wrapper h4 {
-  margin-bottom: 30px;
+body .center-image {
+  grid-column: 2/-2;
+  grid-row: 2/-2;
+  background-image: url("https://images.unsplash.com/photo-1583309219338-a582f1f9ca6b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1364&q=80");
+  background-size: cover;
+  background-position: center;
 }
-.under-hero .under-hero__content .wrapper h3 {
-  font-size: 36px;
-  text-align: center;
-  margin-bottom: 50px;
-}
-.under-hero .under-hero__content .wrapper a {
-  border: 1px solid black;
-  padding: 20px;
-}
-.under-hero img,
-.under-hero div {
-  width: 50%;
-}
-
-.blog {
-  width: 100%;
+body .number__row {
+  background-color: #af7732;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(3, 60vh);
-  margin-bottom: 80px;
-}
-.blog .blog__post {
-  background-color: #f3ede8;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}
-.blog .blog__post:nth-child(even) img {
-  order: 1;
-}
-.blog .blog__post img {
-  width: 100%;
+  gap: 1px;
   height: 100%;
+  align-items: stretch;
 }
-.blog .blog__post .post__content {
+body .number__row .number {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-.blog .blog__post .post__content .post__date {
-  margin-bottom: 70px;
-}
-.blog .blog__post .post__content h4 {
-  font-size: 32px;
-  margin-bottom: 40px;
-}
-
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 410px);
-}
-.gallery .gallery__poster {
-  height: 100%;
+  background-color: white;
   cursor: pointer;
+  transition: color 0.3s linear, background-color 0.3s linear;
 }
-.gallery .gallery__poster img {
-  max-width: 100%;
-  height: 100%;
-  transition: opacity 0.3s linear;
+body .number__row .number:hover {
+  background-color: #af7732;
+  color: white;
 }
-.gallery .gallery__poster img:hover {
-  opacity: 0.5;
+body .scrolling__text {
+  grid-column-start: 2;
+  white-space: nowrap;
+  overflow: hidden;
+}
+body .scrolling__text span {
+  animation: scrollText 3s linear infinite forwards;
 }
 
-.footer {
-  margin-top: 100px;
-  background-color: #f3ede8;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  padding: 65px 0px;
-}
-.footer .footer__column {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.footer .footer__column .column__title {
-  margin-bottom: 50px;
-  opacity: 0.5;
-}
-.footer .footer__column ul {
-  text-align: center;
-}
-.footer .footer__column ul li {
-  margin-bottom: 15px;
-}
-.footer .footer__column:nth-child(2) {
-  border-right: 1px solid black;
-  border-left: 1px solid black;
+@keyframes scrollText {
+  0% {
+    transform: translateX(-150px);
+  }
+  50% {
+    transform: translateX(150px);
+  }
+  100% {
+    transform: translateX(-150px);
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
