--- a/dest/css/styles.css
+++ b/dest/css/styles.css
@@ -4,71 +4,72 @@
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  height: 100vh;
-  background-color: #af7732;
-  display: grid;
-  grid-template-columns: 1.5fr 1.9fr 1.5fr;
-  grid-template-rows: 1fr 5fr 1fr;
-  gap: 1px;
-}
-body > * {
-  background-color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #af7732;
-  font-size: 22px;
-  text-transform: uppercase;
-}
-body .menu {
-  grid-column-start: -2;
-}
-body .center-image {
-  grid-column: 2/-2;
-  grid-row: 2/-2;
-  background-image: url("https://images.unsplash.com/photo-1583309219338-a582f1f9ca6b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1364&q=80");
-  background-size: cover;
-  background-position: center;
-}
-body .number__row {
-  background-color: #af7732;
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 1px;
-  height: 100%;
-  align-items: stretch;
-}
-body .number__row .number {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-  cursor: pointer;
-  transition: color 0.3s linear, background-color 0.3s linear;
-}
-body .number__row .number:hover {
-  background-color: #af7732;
-  color: white;
-}
-body .scrolling__text {
-  grid-column-start: 2;
-  white-space: nowrap;
-  overflow: hidden;
-}
-body .scrolling__text span {
-  animation: scrollText 3s linear infinite forwards;
 }
 
-@keyframes scrollText {
-  0% {
-    transform: translateX(-150px);
-  }
-  50% {
-    transform: translateX(150px);
-  }
-  100% {
-    transform: translateX(-150px);
-  }
+header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  height: 50px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+}
+header nav {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  font-size: 32px;
+  text-transform: lowercase;
+}
+header nav ul {
+  display: flex;
+  align-items: center;
+  padding: 0px 15px;
+}
+header nav ul:hover {
+  background-color: gainsboro;
+}
+header nav ul li {
+  cursor: pointer;
+  margin-right: 50px;
+}
+header nav ul:first-child:hover li:not(:first-child) {
+  color: white !important;
+}
+header nav ul:first-child li:first-child {
+  margin-right: 120px;
+}
+header nav ul:first-child li:not(:first-child) {
+  color: gainsboro;
+  margin-right: 50px;
+}
+
+main {
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 45vh;
+}
+main article {
+  cursor: pointer;
+  height: 100%;
+  display: grid;
+  grid-template-rows: 10fr 0.8fr;
+}
+main article img {
+  min-width: 100%;
+  height: 100%;
+}
+main article div {
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
+  padding-left: 10px;
+}
+main article div h3 {
+  font-size: 14px;
 }
 
 /*# sourceMappingURL=styles.css.map */
