--- a/dest/css/styles.css
+++ b/dest/css/styles.css
@@ -1,3 +1,23 @@
+.links .link h4, .products .product .product__category {
+  font-weight: 600;
+  font-size: 22px;
+  margin-bottom: 50px;
+}
+
+a.btn {
+  text-decoration: none;
+  color: inherit;
+  border: 0.5px solid rgba(0, 0, 0, 0.3);
+  padding: 10px 40px;
+  font-weight: 500;
+  border-radius: 99px;
+  transition: background-color 0.2s linear;
+}
+a.btn:hover {
+  background-color: black;
+  color: white;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -6,70 +26,122 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-header {
-  width: 100%;
-  position: fixed;
-  top: 0;
-  height: 50px;
-  background-color: white;
-  display: flex;
-  align-items: center;
-}
-header nav {
-  width: 100%;
-  height: 100%;
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  font-size: 32px;
-  text-transform: lowercase;
-}
-header nav ul {
-  display: flex;
-  align-items: center;
-  padding: 0px 15px;
-}
-header nav ul:hover {
-  background-color: gainsboro;
-}
-header nav ul li {
-  cursor: pointer;
-  margin-right: 50px;
-}
-header nav ul:first-child:hover li:not(:first-child) {
-  color: white !important;
-}
-header nav ul:first-child li:first-child {
-  margin-right: 120px;
-}
-header nav ul:first-child li:not(:first-child) {
-  color: gainsboro;
-  margin-right: 50px;
+main {
+  line-height: 1.6;
+  grid-column-start: 2;
+  width: 55%;
+  margin: 0 auto;
 }
 
-main {
-  margin-top: 50px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 45vh;
+p {
+  font-size: 30px;
 }
-main article {
-  cursor: pointer;
-  height: 100%;
-  display: grid;
-  grid-template-rows: 10fr 0.8fr;
-}
-main article img {
-  min-width: 100%;
-  height: 100%;
-}
-main article div {
+
+.hero {
+  margin-top: 150px;
+  width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  text-transform: uppercase;
-  padding-left: 10px;
+  margin-bottom: 150px;
 }
-main article div h3 {
-  font-size: 14px;
+.hero .hero__photo {
+  height: 70vh;
+  width: 90%;
+  background-image: url("https://source.unsplash.com/random/");
+}
+.hero h2 {
+  font-weight: 500;
+  font-size: 32px;
+  margin-top: 80px;
+  margin-bottom: 120px;
+}
+.hero p {
+  font-size: 30px;
+}
+.hero p span {
+  font-size: 25px;
+  margin-right: 50px;
+  font-weight: 500;
+}
+
+.products {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.products .product {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  padding: 20px 0px;
+  border-top: 0.5px solid rgba(0, 0, 0, 0.3);
+  grid-column-start: span 2;
+}
+.products .product:nth-child(2) div, .products .product:nth-child(4) div {
+  order: 1;
+}
+.products .product p {
+  margin-bottom: 50px;
+}
+.products .line {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-start: span 2;
+  gap: 10px;
+}
+.products .line .product {
+  grid-template-columns: 1fr;
+  grid-column-start: span 1;
+}
+.products .line .product p {
+  font-size: 22px;
+  margin-top: 30px;
+}
+
+.links {
+  margin-top: 100px;
+  display: grid;
+  border-top: 0.5px solid rgba(0, 0, 0, 0.3);
+  padding-top: 20px;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin-bottom: 200px;
+}
+.links .link {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.links .link h4 {
+  margin-bottom: 30px;
+}
+.links .link span {
+  font-size: 22px;
+  margin-bottom: 20px;
+}
+
+footer {
+  background-color: #4d4c4c;
+  width: 100%;
+  padding: 100px 0;
+}
+footer .footer__top {
+  width: 55%;
+  margin: 0 auto;
+  color: white;
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+}
+footer .footer__top span {
+  font-size: 38px;
+}
+footer .footer__top ul {
+  width: 100%;
+  display: flex;
+}
+footer .footer__top ul li {
+  margin-right: 10px;
 }
 
 /*# sourceMappingURL=styles.css.map */
