--- a/dest/css/styles.css
+++ b/dest/css/styles.css
@@ -1,147 +1,124 @@
-.links .link h4, .products .product .product__category {
-  font-weight: 600;
-  font-size: 22px;
-  margin-bottom: 50px;
-}
-
-a.btn {
-  text-decoration: none;
-  color: inherit;
-  border: 0.5px solid rgba(0, 0, 0, 0.3);
-  padding: 10px 40px;
-  font-weight: 500;
-  border-radius: 99px;
-  transition: background-color 0.2s linear;
-}
-a.btn:hover {
-  background-color: black;
-  color: white;
-}
-
+@import url("https://fonts.googleapis.com/css?family=Yrsa:400,500&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap");
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin-top: 60px;
 }
 
-main {
-  line-height: 1.6;
-  grid-column-start: 2;
-  width: 55%;
-  margin: 0 auto;
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 60px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  width: 100%;
+  padding: 0px 10%;
 }
-
-p {
-  font-size: 30px;
+header h1 {
+  place-self: center center;
+  font-family: "Yrsa";
+}
+header > span {
+  justify-self: end;
+}
+header nav ul {
+  display: flex;
+  font-family: "Montserrat", sans-serif;
+}
+header nav ul li:not(:last-child) {
+  margin-right: 10px;
+}
+header .logo {
+  font-size: 48px;
+  font-weight: 500;
+  display: flex;
+}
+header .logo div {
+  transform: rotateZ(-15deg);
+  margin: 0px -3px;
 }
 
 .hero {
-  margin-top: 150px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 150px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: calc(100vh - 60px);
 }
-.hero .hero__photo {
-  height: 70vh;
-  width: 90%;
+.hero .hero__img {
   background-image: url("https://source.unsplash.com/random/");
+  background-size: cover;
+  background-position: center center;
 }
-.hero h2 {
-  font-weight: 500;
-  font-size: 32px;
-  margin-top: 80px;
-  margin-bottom: 120px;
-}
-.hero p {
-  font-size: 30px;
-}
-.hero p span {
-  font-size: 25px;
-  margin-right: 50px;
-  font-weight: 500;
-}
-
-.products {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}
-.products .product {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 10px;
-  padding: 20px 0px;
-  border-top: 0.5px solid rgba(0, 0, 0, 0.3);
-  grid-column-start: span 2;
-}
-.products .product:nth-child(2) div, .products .product:nth-child(4) div {
-  order: 1;
-}
-.products .product p {
-  margin-bottom: 50px;
-}
-.products .line {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-column-start: span 2;
-  gap: 10px;
-}
-.products .line .product {
-  grid-template-columns: 1fr;
-  grid-column-start: span 1;
-}
-.products .line .product p {
-  font-size: 22px;
-  margin-top: 30px;
-}
-
-.links {
-  margin-top: 100px;
-  display: grid;
-  border-top: 0.5px solid rgba(0, 0, 0, 0.3);
-  padding-top: 20px;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-  margin-bottom: 200px;
-}
-.links .link {
+.hero .hero__text {
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
 }
-.links .link h4 {
+.hero .hero__text h2 {
+  font-family: "Yrsa";
+  font-size: 52px;
+  text-align: center;
+  width: 60%;
+  font-weight: 500;
+  margin-bottom: 40px;
+}
+.hero .hero__text span {
+  font-size: 12px;
+}
+
+a {
+  font-weight: 600;
+  color: #ff6429;
+}
+
+.banner {
+  background-color: #efcb56;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.banner h3 {
+  font-family: "Yrsa";
+  font-size: 56px;
   margin-bottom: 30px;
 }
-.links .link span {
-  font-size: 22px;
-  margin-bottom: 20px;
+.banner p {
+  width: 50%;
+  text-align: center;
+  font-family: "Yrsa";
+  font-size: 32px;
+  margin-bottom: 30px;
+}
+.banner span {
+  font-size: 12px;
 }
 
-footer {
-  background-color: #4d4c4c;
-  width: 100%;
-  padding: 100px 0;
-}
-footer .footer__top {
-  width: 55%;
-  margin: 0 auto;
-  color: white;
+.gallery {
   display: grid;
-  grid-template-columns: 1.5fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 50vh;
 }
-footer .footer__top span {
-  font-size: 38px;
+.gallery .gallery__item {
+  background-size: cover;
+  background-position: center;
+  background-image: url("https://source.unsplash.com/random/");
+  transition: all 0.2s linear;
+  cursor: pointer;
+  overflow: hidden;
 }
-footer .footer__top ul {
-  width: 100%;
-  display: flex;
+.gallery .gallery__item:first-child, .gallery .gallery__item:nth-child(5), .gallery .gallery__item:nth-child(7), .gallery .gallery__item:nth-child(10) {
+  grid-column-start: span 2;
 }
-footer .footer__top ul li {
-  margin-right: 10px;
+.gallery .gallery__item:hover {
+  filter: blur(50px);
 }
 
 /*# sourceMappingURL=styles.css.map */
