--- a/dest/css/styles.css
+++ b/dest/css/styles.css
@@ -1,124 +1,47 @@
-@import url("https://fonts.googleapis.com/css?family=Yrsa:400,500&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap");
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  margin-top: 60px;
-}
-
-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 60px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  align-items: center;
-  width: 100%;
-  padding: 0px 10%;
+  grid-template-columns: 1.3fr 4fr;
+  padding: 20px;
+  font-size: 13px;
+  align-items: start;
 }
-header h1 {
-  place-self: center center;
-  font-family: "Yrsa";
-}
-header > span {
-  justify-self: end;
-}
-header nav ul {
-  display: flex;
-  font-family: "Montserrat", sans-serif;
-}
-header nav ul li:not(:last-child) {
-  margin-right: 10px;
-}
-header .logo {
-  font-size: 48px;
-  font-weight: 500;
-  display: flex;
-}
-header .logo div {
-  transform: rotateZ(-15deg);
-  margin: 0px -3px;
-}
-
-.hero {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: calc(100vh - 60px);
-}
-.hero .hero__img {
-  background-image: url("https://source.unsplash.com/random/");
-  background-size: cover;
-  background-position: center center;
-}
-.hero .hero__text {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.hero .hero__text h2 {
-  font-family: "Yrsa";
-  font-size: 52px;
-  text-align: center;
-  width: 60%;
-  font-weight: 500;
-  margin-bottom: 40px;
-}
-.hero .hero__text span {
-  font-size: 12px;
-}
-
-a {
-  font-weight: 600;
-  color: #ff6429;
-}
-
-.banner {
-  background-color: #efcb56;
-  height: 50vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.banner h3 {
-  font-family: "Yrsa";
-  font-size: 56px;
-  margin-bottom: 30px;
-}
-.banner p {
-  width: 50%;
-  text-align: center;
-  font-family: "Yrsa";
-  font-size: 32px;
-  margin-bottom: 30px;
-}
-.banner span {
-  font-size: 12px;
-}
-
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: 50vh;
-}
-.gallery .gallery__item {
-  background-size: cover;
-  background-position: center;
-  background-image: url("https://source.unsplash.com/random/");
-  transition: all 0.2s linear;
+body h1 {
   cursor: pointer;
-  overflow: hidden;
+  font-weight: 500;
 }
-.gallery .gallery__item:first-child, .gallery .gallery__item:nth-child(5), .gallery .gallery__item:nth-child(7), .gallery .gallery__item:nth-child(10) {
+body h1:hover {
+  color: blue;
+}
+
+main {
+  display: grid;
+  column-gap: 20px;
+  row-gap: 80px;
+  grid-template-columns: repeat(2, 1fr);
+}
+main nav {
   grid-column-start: span 2;
 }
-.gallery .gallery__item:hover {
-  filter: blur(50px);
+main nav ul {
+  display: flex;
+}
+main nav ul li:not(:last-child) {
+  margin-right: 10px;
+}
+main .photo:hover h4 {
+  color: blue;
+}
+main .photo img {
+  max-width: 100%;
+  margin-bottom: 10px;
+}
+main .photo h4 {
+  font-size: 14px;
 }
 
 /*# sourceMappingURL=styles.css.map */
