--- a/dest/css/styles.css
+++ b/dest/css/styles.css
@@ -4,44 +4,123 @@
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  display: grid;
-  grid-template-columns: 1.3fr 4fr;
-  padding: 20px;
-  font-size: 13px;
-  align-items: start;
-}
-body h1 {
-  cursor: pointer;
-  font-weight: 500;
-}
-body h1:hover {
-  color: blue;
+  margin-top: 40px;
 }
 
-main {
-  display: grid;
-  column-gap: 20px;
-  row-gap: 80px;
-  grid-template-columns: repeat(2, 1fr);
+.header {
+  width: 100%;
+  background-color: white;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  padding: 0px 10px;
 }
-main nav {
-  grid-column-start: span 2;
+.header h1 {
+  font-size: 22px;
+  text-transform: uppercase;
 }
-main nav ul {
+.header nav ul {
   display: flex;
 }
-main nav ul li:not(:last-child) {
-  margin-right: 10px;
+.header nav ul li {
+  font-size: 20px;
+  display: flex;
+  align-items: center;
 }
-main .photo:hover h4 {
-  color: blue;
+.header nav ul li:nth-child(3n+1) span {
+  background-color: #e4c464;
 }
-main .photo img {
-  max-width: 100%;
-  margin-bottom: 10px;
+.header nav ul li:nth-child(3n+2) span {
+  background-color: #56854a;
 }
-main .photo h4 {
-  font-size: 14px;
+.header nav ul li:nth-child(3n+3) span {
+  background-color: #97c2de;
+}
+.header nav ul li span {
+  margin-right: 5px;
+  height: 15px;
+  width: 15px;
+  background-color: red;
+  border-radius: 50%;
+}
+.header nav ul li a {
+  color: inherit;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.header nav ul li:not(:last-child) {
+  margin-right: 20px;
+}
+
+.posts {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: 55vh;
+}
+.posts .post {
+  cursor: pointer;
+  padding: 20px;
+  font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+}
+.posts .post .post__header,
+.posts .post footer {
+  display: flex;
+  justify-content: space-between;
+  letter-spacing: 1px;
+}
+.posts .post:nth-child(3n+1) {
+  background-color: #dd433e;
+}
+.posts .post:nth-child(3n+2) {
+  background-color: #e4c874;
+}
+.posts .post:nth-child(3n+3) {
+  background-color: #198ca1;
+}
+.posts .post:nth-child(3n+4) {
+  background-color: #ec9860;
+}
+.posts .post:nth-child(3n+5) {
+  background-color: #ccb2a2;
+}
+.posts .post .post__content {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.posts .post .post__content h3 {
+  letter-spacing: 2px;
+  line-height: 1.3;
+  font-size: 26px;
+  text-align: center;
+}
+.posts .post .post__content .invisible {
+  display: none;
+  height: 100%;
+  width: 100%;
+  background-image: url("https://images.prismic.io/beige/3479dcfd-17b4-4391-8b1c-506801d60786_Beige-Mode-Fashion-Menswear-Trends-2020-Gucci-Cruise-5.jpg?auto=compress,format?auto=format,compress&q=60&fit=crop&w=1200&h=1920");
+  background-position: center center;
+  background-size: cover;
+}
+.posts .post:hover .post__content .visible {
+  display: none;
+}
+.posts .post:hover .post__content .invisible {
+  display: block;
 }
 
 /*# sourceMappingURL=styles.css.map */
