--- a/dest/css/styles.css
+++ b/dest/css/styles.css
@@ -1,126 +1,67 @@
+@import url("https://fonts.googleapis.com/css?family=Nunito|PT+Serif:400,400i&display=swap");
+.cv span,
+.about span, .works .works__header span {
+  color: #fc3f33;
+  font-size: 12px;
+  font-family: "Nunito";
+}
+
+.works .works__list .works__work, .works .works__header {
+  display: grid;
+  grid-template-columns: 1fr 3fr 5fr;
+}
+
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  margin-top: 40px;
+  font-family: "PT Serif", serif;
+  background-color: #f0efeb;
+  color: #444444;
+  padding: 30px 40px;
+  line-height: 1.5;
 }
 
-.header {
-  width: 100%;
-  background-color: white;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  padding: 0px 10px;
-}
-.header h1 {
-  font-size: 22px;
-  text-transform: uppercase;
-}
-.header nav ul {
-  display: flex;
-}
-.header nav ul li {
-  font-size: 20px;
-  display: flex;
-  align-items: center;
-}
-.header nav ul li:nth-child(3n+1) span {
-  background-color: #e4c464;
-}
-.header nav ul li:nth-child(3n+2) span {
-  background-color: #56854a;
-}
-.header nav ul li:nth-child(3n+3) span {
-  background-color: #97c2de;
-}
-.header nav ul li span {
-  margin-right: 5px;
-  height: 15px;
-  width: 15px;
-  background-color: red;
-  border-radius: 50%;
-}
-.header nav ul li a {
-  color: inherit;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-.header nav ul li:not(:last-child) {
-  margin-right: 20px;
-}
-
-.posts {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-auto-rows: 55vh;
-}
-.posts .post {
-  cursor: pointer;
-  padding: 20px;
-  font-size: 12px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  position: relative;
-}
-.posts .post .post__header,
-.posts .post footer {
-  display: flex;
-  justify-content: space-between;
+header {
+  font-size: 46px;
   letter-spacing: 1px;
+  margin-bottom: 175px;
 }
-.posts .post:nth-child(3n+1) {
-  background-color: #dd433e;
+
+.works {
+  margin-bottom: 80px;
 }
-.posts .post:nth-child(3n+2) {
-  background-color: #e4c874;
+.works .works__header {
+  padding-bottom: 10px;
 }
-.posts .post:nth-child(3n+3) {
-  background-color: #198ca1;
+.works .works__list .works__work {
+  cursor: pointer;
+  font-size: 20px;
+  border-top: 1px solid #444444;
+  padding: 20px 0px;
 }
-.posts .post:nth-child(3n+4) {
-  background-color: #ec9860;
+.works .works__list .works__work:hover {
+  font-style: italic;
 }
-.posts .post:nth-child(3n+5) {
-  background-color: #ccb2a2;
+
+.cv {
+  margin-bottom: 120px;
 }
-.posts .post .post__content {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+.cv,
+.about {
+  font-size: 30px;
 }
-.posts .post .post__content h3 {
-  letter-spacing: 2px;
-  line-height: 1.3;
-  font-size: 26px;
-  text-align: center;
+a {
+  color: #fc3f33;
 }
-.posts .post .post__content .invisible {
-  display: none;
-  height: 100%;
-  width: 100%;
-  background-image: url("https://images.prismic.io/beige/3479dcfd-17b4-4391-8b1c-506801d60786_Beige-Mode-Fashion-Menswear-Trends-2020-Gucci-Cruise-5.jpg?auto=compress,format?auto=format,compress&q=60&fit=crop&w=1200&h=1920");
-  background-position: center center;
-  background-size: cover;
+a:hover {
+  font-style: italic;
 }
-.posts .post:hover .post__content .visible {
-  display: none;
-}
-.posts .post:hover .post__content .invisible {
-  display: block;
+
+.about {
+  padding-bottom: 80px;
 }
 
 /*# sourceMappingURL=styles.css.map */
